--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 
 .navbar {
   width: 100%;
-  background-color: #555;
+  background-color: #59c3c3;
   overflow: auto;
 }
 
@@ -10,7 +10,7 @@
   padding: 12px;
   color: white;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 14px;
 }
 
 .navbar a:hover {
