--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,7 @@
-
-.navbar {
-  width: 100%;
+/* #{
   background-color: #59c3c3;
-  overflow: auto;
 }
+
 
 .navbar a {
   float: left;
@@ -26,4 +24,16 @@
     float: none;
     display: block;
   }
+} */
+body {
+  background: linear-gradient(70deg, #e6e6e6, #f7f7f7);
+  color: #514B64;
+  min-height: 100vh;
+}
+
+code {
+  background: #fff;
+  padding: 0.2rem;
+  border-radius: 0.2rem;
+  margin: 0 0.3rem;
 }
