--- a/css/index.css
+++ b/css/index.css
@@ -37,3 +37,25 @@ code {
   border-radius: 0.2rem;
   margin: 0 0.3rem;
 }  */
+body{
+  background-color:#59c3c3;
+  font-size:14px;
+  color:#fff;
+}
+.simple-login-container{
+  width:300px;
+  max-width:100%;
+  margin:50px auto;
+}
+.simple-login-container h2{
+  text-align:center;
+  font-size:20px;
+}
+
+.simple-login-container .btn-login{
+  background-color:#FF5964;
+  color:#fff;
+}
+a{
+  color:#fff;
+}
